# gcfeeder

./: .clang-format  .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  build.zig
.github/workflows/: ci.yml  main.yml  release.yml
core/: Cargo.toml
core/src/: feeder.rs  lib.rs
core/src/adapter/: poller.rs
core/src/bridge/: mod.rs
core/src/mapping/: mod.rs
core/src/mapping/layers/: mod.rs
core/src/util/: recent_channel.rs
crates/gcfeeder/: Cargo.toml  build.rs
crates/gcfeeder-core/: Cargo.toml
crates/gcfeeder-core/src/: calibration.rs  feeder.rs
crates/gcfeeder-core/src/adapter/: mod.rs  poller.rs  source.rs
crates/gcfeeder-core/src/bridge/: mod.rs  rumble.rs  uinput.rs  vigem.rs
crates/gcfeeder-core/src/mapping/: mod.rs
crates/gcfeeder-core/src/mapping/layers/: analog_scaling.rs  calibration.rs  center_calibration.rs  ess_inversion.rs
crates/gcfeeder-core/src/util/: average_timer.rs  mod.rs  recent_channel.rs
crates/gcfeeder/src/: config.rs  lib.rs  main.rs
crates/gcfeeder/src/gui/: log.rs  mod.rs  util.rs
crates/gcfeeder/src/gui/app/: mod.rs
crates/gcfeeder/src/gui/app/panel/: calibration.rs  config.rs  log.rs  mod.rs  profile.rs  stats.rs
crates/gcfeeder/src/gui/app/widget/: mod.rs  shape.rs  stick.rs  trigger.rs
feeder/: build.zig
feeder/src/: adapter.zig  emulator.zig  main.zig
feeder/src/bridge/: bridge.zig
feeder/src/gui/: gui.zig
feeder/src/gui/cpp/: app_log.h  gui.cpp
include/: public.h  vjoyinterface.h
lib/: libepoxy.dll.lib
lib/gcinput/: Cargo.toml
lib/gcinput/src/: lib.rs
lib/panic-log/: Cargo.toml
lib/panic-log/src/: lib.rs
rules/: 51-input-udev.rules
schema/: gcfeeder.schema.json
src/: adapter.rs  adapter.zig  atomic.zig  c.zig  calibrate.zig  calibration.rs  config.rs  config.zig  emulator.zig  feeder.rs  feeder.zig  lib.rs  main.rs  main.zig  panic.rs  ui.rs  usb.zig  util.rs  vjoy.rs  vjoy.zig
src/adapter/: mod.rs  poller.rs  rumble.rs
src/bridge/: bridge.zig  vigem.rs  vigem.zig
src/display/: bean_button_fragment.glsl  circle_button_fragment.glsl  display.zig  fragment.glsl  glad.zig  glfw.zig  sdf_button_fragment.glsl  stick_fragment.glsl  trigger_fragment.glsl  vertex.glsl  zgl.zig
src/ess/: ess.zig
src/feeder/: adapter.zig  calibrate.zig  config.zig  example_glfw_opengl3.zig  feeder.zig  glfw.zig  imgui_impl_glfw.zig  main.zig  vjoy.zig
src/feeder/bridge/: bridge.zig  vigem.zig  vjoy.zig
src/feeder/ess/: ESS.c  ESS.h  ess.zig
src/feeder/gui/: gl.zig  gui.zig  imgui_impl_opengl3.zig
src/feeder/gui/cpp/: app_log.cpp  app_log.h  gui.cpp  gui.h
src/gui/: app.rs  gui.zig  log.rs  mod.rs  util.rs
src/gui/app/: mod.rs
src/gui/app/panel/: calibration.rs  config.rs  log.rs  mod.rs  profile.rs  stats.rs
src/gui/app/widget/: mod.rs  shape.rs  stick.rs  trigger.rs
src/gui/cpp/: app_log.cpp  app_log.h  calibration_window.cpp  calibration_window.h  config.cpp  config.h  config_editor.cpp  config_editor.h  gui.cpp  gui.h  gui_impl.cpp  gui_impl.h  gui_main.cpp  gui_main.h  gui_state.cpp  gui_state.h  util.h
src/mapping/layers/: analog_scaling.rs  calibration.rs  center_calibration.rs  ess_inversion.rs  mod.rs
src/ui/: mod.rs  style.rs
src/util/: average_timer.rs  mod.rs  recent_channel.rs
src/viewer/: display.zig  main.zig
src/viewer/sdf/: octagon-sdf.gray
src/viewer/shader/: background.frag  circle_button.frag  circle_button_fragment.glsl  color.frag  color.glsl  sdf_button.frag  sdf_button_fragment.glsl  stick.frag  stick_fragment.glsl  trigger.frag  trigger_fragment.glsl  vertex.glsl
src/zusb/: c.zig  config_descriptor.zig  constants.zig  constructor.zig  context.zig  device.zig  device_descriptor.zig  device_handle.zig  device_list.zig  endpoint_descriptor.zig  error.zig  fields.zig  interface_descriptor.zig  transfer.zig  zusb.zig
theme/: cotton-candy.frag  cotton-candy.glsl  rainbow.frag  rainbow.glsl  theme.json
themes/: default.json
viewer/: build.zig
viewer/src/: display.zig  main.zig
viewer/src/sdf/: bean-sdf.gray  z-button-sdf.gray
viewer/src/shader/: circle_button.frag  main.vert  trigger.frag
viewer/theme/: rainbow.frag
