[package]
name = "gcfeeder"
version = "0.1.0"
authors = ["Sirius902 <3645979-Sirius902@users.noreply.gitlab.com>"]
edition = "2018"

[dependencies]
bus = "2.2"
crossbeam = "0.7"
iced = { git = "https://github.com/hecrj/iced", rev = "00d66da", features = ["tokio"] }
libc = "0.2"
once_cell = "1.4"
rusb = "0.6"
stoppable_thread = "0.2"
winapi = "0.3"
