[package]
name = "gcfeeder"
version = "3.0.0"
repository = "https://github.com/Sirius902/gcfeeder/"
edition = "2021"

[dependencies]
backtrace = "0.3.66"
bincode = "1.3.3"
conv = "0.3.3"
crossbeam = "0.8.2"
ctrlc = "3.2.3"
eframe = "0.19.0"
egui = "0.19.0"
enclose = "1.1.8"
enum-iterator = "1.2.0"
nalgebra = "0.31.1"
once_cell = "1.14.0"
rayon = "1.5.3"
rusb = "0.9.1"
thiserror = "1.0.34"
toml = "0.5.9"

[dependencies.log]
version = "0.4.17"
features = ["std"]

[dependencies.serde]
version = "1.0.144"
features = ["derive"]

[dependencies.time]
version = "0.3.14"
features = ["macros", "formatting", "local-offset"]

[dependencies.trayicon]
version = "0.1.3"
features = ["crossbeam-channel"]

[dependencies.vigem-client]
version = "0.1.4"
features = ["unstable_xtarget_notification"]
