[package]
name = "gcfeeder-core"
version = "0.0.0"
repository = "https://github.com/Sirius902/gcfeeder/"
edition = "2021"

[dependencies]
conv = "0.3.3"
crossbeam = "0.8.2"
enclose = "1.1.8"
enum-iterator = "1.2.0"
enum_dispatch = "0.3.11"
nalgebra = "0.32.1"
once_cell = "1.14.0"
rayon = "1.5.3"
rusb = "0.9.1"
thiserror = "1.0.34"

[dependencies.gcinput]
path = "../../lib/gcinput"
features = ["nalgebra"]

[dependencies.log]
version = "0.4.17"
features = ["std"]

[dependencies.serde]
version = "1.0.144"
features = ["derive"]

[target.'cfg(windows)'.dependencies.vigem-client]
version = "0.1.4"
features = ["unstable_xtarget_notification"]

[target.'cfg(target_os = "linux")'.dependencies]
input-linux = "0.5.0"
