[package]
name = "gcfeeder"
version = "3.0.0"
repository = "https://github.com/Sirius902/gcfeeder/"
edition = "2021"

[dependencies]
bincode = "1.3.3"
crossbeam = "0.8.2"
eframe = "0.20.1"
egui = "0.20.1"
enum-iterator = "1.2.0"
nalgebra = "0.32.1"
once_cell = "1.14.0"
rayon = "1.5.3"
rusb = "0.9.1"
thiserror = "1.0.34"
toml = "0.5.9"

[dependencies.gcinput]
path = "../../lib/gcinput"

[dependencies.panic-log]
path = "../../lib/panic-log"

[dependencies.gcfeeder-core]
path = "../gcfeeder-core"

[dependencies.image]
version = "0.24.5"
default-features = false
features = ["png"]

[dependencies.log]
version = "0.4.17"
features = ["std"]

[dependencies.serde]
version = "1.0.144"
features = ["derive"]

[dependencies.time]
version = "0.3.14"
features = ["macros", "formatting", "local-offset"]

[dependencies.trayicon]
version = "0.1.3"
features = ["crossbeam-channel"]

[build-dependencies.vergen]
version = "7.5.0"
default-features = false
features = ["git"]

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.8.0"

[target.'cfg(windows)'.build-dependencies.image]
version = "0.24.5"
default-features = false
features = ["png", "ico"]
